--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -1,50 +1,51 @@
 ---
 title: "How Wealth Affects Olympic Performance"
 author: "Annabelle Haryanto, Ethan Hsu, Kassy Chaput"
-date: "1/22/2022"
+date: "11/14/2022"
 output: html_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 ```
 
 **P02: Exploratory Data Analysis**
 
-## ACCESSING THE /source DIRECTORY
-### Example 1: Source some code and run a function
-```{r}
-# Example 1: Note relative path, which can be read: Up one
-# directory(..), down into source (/source), and
-# then "source" an R file (data_access.R)
-source("../source/data_access.R")
-data_access_test()
+*Dynamic paragraph:*
+
+*Table:*
+```{r, echo = FALSE}
+# Aggregate Table
+
+#source("../data/AggregateTable.R")
+#average_gold
 ```
 
-### Example 2: Initialize a variable and then use it
-```{r}
-# Example 1: This function was "sourced" above
-msg <- data_access_test(" Morgan!")
+*Three Charts:*
+
+```{r, echo = FALSE}
+# GDP Map
+
+source("../source/gdp map.R")
+ggplotly(gdp_map)
 ```
 
-> `r msg` Hope you have a good day!!
+This map is included to visualize the Gross Domestic Product (GDP) per capita by each country from data collected at the end of 2021. This can be used to achieve a broad overview of the economy in every country across the world. The countries with the darkest green color have the highest GDP such as the United States, Australia, and a few countries in Europe. Those with a lighter green color have a lower GDP production such as many of the countries in both Africa and South America. The countries with high GDP (darker color) can also further be compared to the bar chart below to help determine if a correlation between high GDP and Olympic success exists.  
 
-## ABOUT THIS FILE:
+```{r, echo = FALSE}
+# Bar Chart
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+source("../source/Bar_Chart.R")
+ggplotly(top_performers)
 ```
 
-## Including Plots
+This chart is to visualize the top 10 performing countries (in medal count) over the course of Olympic history. This chart can be used to quickly analyze locations around the world that perform best at the Olympics. The graphic reveals that the United States has the most medals of any country at 5219. We can also see that they have about 2 times as many medals as the next best Olympic team. Another observation we can make from the plot is that Europe seems to be the highest performing continent in Olympic history. South America, Africa, and Asia are left out of the graphic entirely, signaling to us that these continents have no Olympic powerhouses. 
 
-You can also embed plots, for example:
+```{r, echo = FALSE}
+# United States Time Graph
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+source("../source/medals time frame.R")
+ggplotly(medals_US)
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
