--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -19,7 +19,7 @@ options(scipen = 999)
 
 #### Dynamic Paragraph:
 
-We sought to find and display a correlation between a countries’ Gross Domestic Product (GDP) and their Olympic success which we measured through total medal count. We have observed `r summary_info$summary_num_countries` different countries throughout this process. We have found that the average GDP from 2021 across all countries is approximately `r round(summary_info$summary_avg_gdp)` and the average medal count for each country as of 2021 is approximately `r round(summary_info$summary_avg_medal_count)` . We have further observed that approximately `r summary_info$summary_above_avg_gdp` countries have a GDP higher than the world average and that approximately `r summary_info$summary_above_avg_medals` countries have an above average number of total medals won at the Olympics.
+We sought to find and display a correlation between a countries’ Gross Domestic Product (GDP) and their Olympic success which we measured through total medal count. We have observed `r summary_info$summary_num_countries` different countries throughout this process. We have found that the average GDP from 2021 across all countries is approximately `r prettyNum(round(summary_info$summary_avg_gdp), big.mark = ",", scientific = FALSE)` and the average medal count for each country as of 2021 is approximately `r round(summary_info$summary_avg_medal_count)` . We have further observed that approximately `r summary_info$summary_above_avg_gdp` countries have a GDP higher than the world average and that approximately `r summary_info$summary_above_avg_medals` countries have an above average number of total medals won at the Olympics.
 
 #### Table:
 ```{r, echo = FALSE}
@@ -31,7 +31,7 @@ source("../source/AggregateTable.R")
 | Measurement | Value |
 | ----------- | ----- |
 | Median Medal Count | `r average_medals` |
-| Median 2020 GDP | `r round(median_2020_GDP)` |
+| Median 2020 GDP | `r prettyNum(round(median_2020_GDP), big.mark = ",", scientific = FALSE)` |
 | Gold Percent Won By US | `r (round(usa_gold_percentage, digits = 4)) * 100` |
 
 #### Observations:
